--- a/admin.html
+++ b/admin.html
@@ -5,28 +5,71 @@
   <title>Admin – Mazda Airlines</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; text-align: center; }
-    .card { border: 1px solid #ccc; margin: 10px auto; padding: 10px; width: 300px; border-radius: 8px; }
+    .card, .boarding-card {
+      border: 1px solid #ccc;
+      margin: 10px auto;
+      padding: 10px;
+      width: 320px;
+      border-radius: 8px;
+      background-color: #fff;
+    }
     input { margin-top: 10px; padding: 5px; width: 60%; }
     button { margin: 5px; padding: 6px 12px; }
+    .boarding-card {
+      border: 2px dashed #888;
+      background-color: #f9f9f9;
+    }
+    .section-title {
+      margin-top: 40px;
+      font-size: 1.3em;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
   <h1>Captain Simon's Control Panel</h1>
-  <div id="requestList"></div>
+
+  <div class="section-title">Pending Requests</div>
+  <div id="pendingList"></div>
+
+  <div class="section-title">Approved Boarding Passes</div>
+  <div id="approvedList"></div>
 
   <script>
+    const flightPrefixes = ["MAZ", "LB", "ZGH", "YALLA", "SIM", "LBN"];
+    const gateJokes = [
+      "Gate A7 – near the shawarma stand",
+      "Gate B3 – past the third pothole",
+      "Gate Z1 – next to the guy selling mana2eesh",
+      "Gate M4 – beside the broken roundabout",
+      "Gate C2 – near the loud dabke wedding",
+      "Gate D9 – under the hanging wires",
+      "Gate E5 – past the shortcut with 4 speed bumps"
+    ];
+    const jokes = [
+      "No seatbelts, no snacks… but I might be at your door in 15 minutes. Buckle up (emotionally).",
+      "Delays? Never heard of her. I operate on vibes and Google Maps.",
+      "Our in-flight service includes music from my busted speakers and sharp turns you didn’t ask for.",
+      "No turbulence. Just Lebanese roads.",
+      "Book now. No refunds. No mercy.",
+      "In case of emergency, pray I don’t miss the exit.",
+      "Now boarding: Anyone who can handle 180 km/h in a 50 zone."
+    ];
+
     async function fetchRequests() {
       const res = await fetch('/requests');
       const data = await res.json();
-      const container = document.getElementById('requestList');
-      container.innerHTML = '';
+      const pendingDiv = document.getElementById('pendingList');
+      const approvedDiv = document.getElementById('approvedList');
+      pendingDiv.innerHTML = '';
+      approvedDiv.innerHTML = '';
 
       data.forEach(person => {
-        const div = document.createElement('div');
-        div.className = 'card';
-        div.innerHTML = `<strong>${person.name}</strong> from ${person.city}<br>Status: ${person.status}`;
-
         if (person.status === 'pending') {
+          const div = document.createElement('div');
+          div.className = 'card';
+          div.innerHTML = `<strong>${person.name}</strong> from ${person.city}<br>Status: ${person.status}`;
+
           const input = document.createElement('input');
           input.placeholder = 'Enter ETA';
           input.id = 'eta-' + person.name;
@@ -43,11 +86,25 @@
           div.appendChild(input);
           div.appendChild(approveBtn);
           div.appendChild(rejectBtn);
-        } else if (person.status === 'approved') {
-          div.innerHTML += `<br>ETA: ${person.eta}`;
-        }
 
-        container.appendChild(div);
+          pendingDiv.appendChild(div);
+        } else if (person.status === 'approved') {
+          const flight = `${flightPrefixes[Math.floor(Math.random() * flightPrefixes.length)]}-${Math.floor(100 + Math.random() * 900)}`;
+          const gate = gateJokes[Math.floor(Math.random() * gateJokes.length)];
+          const joke = jokes[Math.floor(Math.random() * jokes.length)];
+
+          const card = document.createElement('div');
+          card.className = 'boarding-card';
+          card.innerHTML = `
+            <strong>${person.name}</strong><br>
+            City: ${person.city}<br>
+            Flight: ${flight}<br>
+            Gate: ${gate}<br>
+            ETA: ${person.eta}<br><br>
+            <em>"${joke}"</em>
+          `;
+          approvedDiv.appendChild(card);
+        }
       });
     }
 
