--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     form { margin-top: 30px; }
     input { padding: 10px; margin: 10px; width: 200px; }
     button { padding: 10px 20px; cursor: pointer; }
+    .boarding-card {
+      border: 2px dashed #888;
+      background-color: #f9f9f9;
+      margin: 30px auto;
+      padding: 20px;
+      border-radius: 10px;
+      width: 300px;
+    }
   </style>
 </head>
 <body>
@@ -19,12 +27,44 @@
     <button type="submit">Submit Request</button>
   </form>
   <p id="statusMessage"></p>
+  <div id="boardingPass"></div>
 
   <script>
+    const flightPrefixes = ["MAZ", "LB", "ZGH", "YALLA", "SIM", "LBN"];
+    const gateJokes = [
+      "Gate A7 – near the shawarma stand",
+      "Gate B3 – past the third pothole",
+      "Gate Z1 – next to the guy selling mana2eesh",
+      "Gate M4 – beside the broken roundabout",
+      "Gate C2 – near the loud dabke wedding",
+      "Gate D9 – under the hanging wires",
+      "Gate E5 – past the shortcut with 4 speed bumps"
+    ];
+    const jokes = [
+      "Brian – Always late. Needs a round of applause if he's ever early.",
+      "Vic – Always in the gym. Might board with protein powder in his carry-on.",
+      "Kerkor – Always trying to kill someone in football. Slide tackles at takeoff.",
+      "Ric – Can’t board without snacks. Last time he brought chips, they lived in the Mazda longer than some of our friendships.",
+      "GAF – Thinks he's a doctor, but almost killed me last time. Board at your own risk.",
+      "Ray – Always puts music in the car… I just wish they were all good.",
+      "If this flight had leg day, Vic would’ve already been here.",
+      "Brian probably missed this flight too. Classic.",
+      "GAF’s prescription for turbulence? Panadol and vibes.",
+      "Kerkor’s boarding pass says ‘slide tackle ready’. Proceed with caution.",
+      "No seatbelts, no snacks… but I might be at your door in 15 minutes. Buckle up (emotionally).",
+      "Delays? Never heard of her. I operate on vibes and Google Maps.",
+      "Our in-flight service includes music from my busted speakers and sharp turns you didn’t ask for.",
+      "No turbulence. Just Lebanese roads.",
+      "Book now. No refunds. No mercy.",
+      "In case of emergency, pray I don’t miss the exit.",
+      "Now boarding: Anyone who can handle 180 km/h in a 50 zone."
+    ];
+
     document.getElementById('requestForm').addEventListener('submit', async (e) => {
       e.preventDefault();
       const name = document.getElementById('name').value.trim();
       const city = document.getElementById('city').value.trim();
+      localStorage.setItem('mazdaUserName', name);
       const res = await fetch('/requests', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
@@ -36,6 +76,34 @@
         document.getElementById('statusMessage').textContent = "Error. Try again.";
       }
     });
+
+    async function checkApproval() {
+      const name = localStorage.getItem('mazdaUserName');
+      if (!name) return;
+
+      const res = await fetch('/requests');
+      const data = await res.json();
+      const user = data.find(p => p.name === name && p.status === 'approved');
+      if (user) {
+        const flight = `${flightPrefixes[Math.floor(Math.random() * flightPrefixes.length)]}-${Math.floor(100 + Math.random() * 900)}`;
+        const gate = gateJokes[Math.floor(Math.random() * gateJokes.length)];
+        const joke = jokes[Math.floor(Math.random() * jokes.length)];
+
+        const passDiv = document.getElementById('boardingPass');
+        passDiv.innerHTML = `
+          <div class="boarding-card">
+            <strong>${user.name}</strong><br>
+            City: ${user.city}<br>
+            Flight: ${flight}<br>
+            Gate: ${gate}<br>
+            ETA: ${user.eta}<br><br>
+            <em>"${joke}"</em>
+          </div>
+        `;
+      }
+    }
+
+    checkApproval();
   </script>
 </body>
 </html>
