fix: updated index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
       "Brian probably missed this flight too. Classic.",
       "GAF’s prescription for turbulence? Panadol and vibes.",
       "Kerkor’s boarding pass says ‘slide tackle ready’. Proceed with caution.",
+      "Jean – Blasts French music like he’s Paris-born… but studied in English and barely speaks French. Shouts on the road like he owns it and the soundtrack.",
+      "Jean – Plays French music at max volume, shouts like a rally driver, and somehow still asks what 'bonjour' means.",
       "No seatbelts, no snacks… but I might be at your door in 15 minutes. Buckle up (emotionally).",
       "Delays? Never heard of her. I operate on vibes and Google Maps.",
       "Our in-flight service includes music from my busted speakers and sharp turns you didn’t ask for.",
