--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <html>
 <head>
   <title>Mazda Airlines – Request a Ride</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
     form { margin-top: 30px; }
-    input { padding: 10px; margin: 10px; width: 200px; }
+    input {
+      padding: 10px;
+      margin: 10px auto;
+      width: 80%;
+      max-width: 300px;
+      display: block;
+    }
+
     button { padding: 10px 20px; cursor: pointer; }
     .boarding-card {
       border: 2px dashed #888;
@@ -14,8 +22,10 @@
       margin: 30px auto;
       padding: 20px;
       border-radius: 10px;
-      width: 300px;
-    }
+      width: 90%;
+      max-width: 320px;
+}
+
   </style>
 </head>
 <body>
