--- a/admin.html
+++ b/admin.html
@@ -3,17 +3,29 @@
 <html>
 <head>
   <title>Admin – Mazda Airlines</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; text-align: center; }
     .card, .boarding-card {
       border: 1px solid #ccc;
       margin: 10px auto;
       padding: 10px;
-      width: 320px;
+      width: 90%;
+      max-width: 320px;
       border-radius: 8px;
       background-color: #fff;
     }
-    input { margin-top: 10px; padding: 5px; width: 60%; }
+
+    input {
+      margin-top: 10px;
+      padding: 8px;
+      width: 80%;
+      max-width: 250px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     button { margin: 5px; padding: 6px 12px; }
     .boarding-card {
       border: 2px dashed #888;
