feat: updated boarding.html

--- a/boarding.html
+++ b/boarding.html
@@ -31,13 +31,26 @@
       "Gate E5 – past the shortcut with 4 speed bumps"
     ];
     const jokes = [
+      "Brian – Always late. Needs a round of applause if he's ever early.",
+      "Vic – Always in the gym. Might board with protein powder in his carry-on.",
+      "Kerkor – Always trying to kill someone in football. Slide tackles at takeoff.",
+      "Ric – Can’t board without snacks. Last time he brought chips, they lived in the Mazda longer than some of our friendships.",
+      "GAF – Thinks he's a doctor, but almost killed me last time. Board at your own risk.",
+      "Ray – Always puts music in the car… I just wish they were all good.",
+      "If this flight had leg day, Vic would’ve already been here.",
+      "Brian probably missed this flight too. Classic.",
+      "GAF’s prescription for turbulence? Panadol and vibes.",
+      "Kerkor’s boarding pass says ‘slide tackle ready’. Proceed with caution.",
+      "Jean – Blasts French music like he’s Paris-born… but studied in English and barely speaks French. Shouts on the road like he owns it and the soundtrack.",
+      "Jean – Plays French music at max volume, shouts like a rally driver, and somehow still asks what 'bonjour' means.",
       "No seatbelts, no snacks… but I might be at your door in 15 minutes. Buckle up (emotionally).",
       "Delays? Never heard of her. I operate on vibes and Google Maps.",
       "Our in-flight service includes music from my busted speakers and sharp turns you didn’t ask for.",
       "No turbulence. Just Lebanese roads.",
       "Book now. No refunds. No mercy.",
       "In case of emergency, pray I don’t miss the exit.",
-      "Now boarding: Anyone who can handle 180 km/h in a 50 zone."
+      "Now boarding: Anyone who can handle 180 km/h in a 50 zone.",
+      "Ric – Says he's not hungry. Then eats half your order and says, 'just tasting bro.'"
     ];
 
     async function fetchApproved() {
