--- a/admin.html
+++ b/admin.html
@@ -1,148 +1,178 @@
-
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Admin – Mazda Airlines</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; text-align: center; }
-    .card, .boarding-card {
-      border: 1px solid #ccc;
-      margin: 10px auto;
-      padding: 10px;
-      width: 90%;
-      max-width: 320px;
-      border-radius: 8px;
-      background-color: #fff;
-    }
+  <head>
+    <title>Admin – Mazda Airlines</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 20px;
+        text-align: center;
+      }
+      .card,
+      .boarding-card {
+        border: 1px solid #ccc;
+        margin: 10px auto;
+        padding: 10px;
+        width: 90%;
+        max-width: 320px;
+        border-radius: 8px;
+        background-color: #fff;
+      }
 
-    input {
-      margin-top: 10px;
-      padding: 8px;
-      width: 80%;
-      max-width: 250px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+      input {
+        margin-top: 10px;
+        padding: 8px;
+        width: 80%;
+        max-width: 250px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
 
-    button { margin: 5px; padding: 6px 12px; }
-    .boarding-card {
-      border: 2px dashed #888;
-      background-color: #f9f9f9;
-    }
-    .section-title {
-      margin-top: 40px;
-      font-size: 1.3em;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-  <h1>Captain Simon's Control Panel</h1>
+      button {
+        margin: 5px;
+        padding: 6px 12px;
+      }
+      .boarding-card {
+        border: 2px dashed #888;
+        background-color: #f9f9f9;
+      }
+      .section-title {
+        margin-top: 40px;
+        font-size: 1.3em;
+        font-weight: bold;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Captain Simon's Control Panel</h1>
 
-  <div class="section-title">Pending Requests</div>
-  <div id="pendingList"></div>
+    <div class="section-title">Pending Requests</div>
+    <div id="pendingList"></div>
 
-  <div class="section-title">Approved Boarding Passes</div>
-  <div id="approvedList"></div>
+    <div class="section-title">Approved Boarding Passes</div>
+    <div id="approvedList"></div>
 
-  <script>
-    const flightPrefixes = ["MAZ", "LB", "ZGH", "YALLA", "SIM", "LBN"];
-    const gateJokes = [
-      "Gate A7 – near the shawarma stand",
-      "Gate B3 – past the third pothole",
-      "Gate Z1 – next to the guy selling mana2eesh",
-      "Gate M4 – beside the broken roundabout",
-      "Gate C2 – near the loud dabke wedding",
-      "Gate D9 – under the hanging wires",
-      "Gate E5 – past the shortcut with 4 speed bumps"
-    ];
-    const jokes = [
-      "Brian – Always late. Needs a round of applause if he's ever early.",
-      "Vic – Always in the gym. Might board with protein powder in his carry-on.",
-      "Kerkor – Always trying to kill someone in football. Slide tackles at takeoff.",
-      "Ric – Can’t board without snacks. Last time he brought chips, they lived in the Mazda longer than some of our friendships.",
-      "GAF – Thinks he's a doctor, but almost killed me last time. Board at your own risk.",
-      "Ray – Always puts music in the car… I just wish they were all good.",
-      "If this flight had leg day, Vic would’ve already been here.",
-      "Brian probably missed this flight too. Classic.",
-      "GAF’s prescription for turbulence? Panadol and vibes.",
-      "Kerkor’s boarding pass says ‘slide tackle ready’. Proceed with caution.",
-      "Jean – Blasts French music like he’s Paris-born… but studied in English and barely speaks French. Shouts on the road like he owns it and the soundtrack.",
-      "Jean – Plays French music at max volume, shouts like a rally driver, and somehow still asks what 'bonjour' means.",
-      "No seatbelts, no snacks… but I might be at your door in 15 minutes. Buckle up (emotionally).",
-      "Delays? Never heard of her. I operate on vibes and Google Maps.",
-      "Our in-flight service includes music from my busted speakers and sharp turns you didn’t ask for.",
-      "No turbulence. Just Lebanese roads.",
-      "Book now. No refunds. No mercy.",
-      "In case of emergency, pray I don’t miss the exit.",
-      "Now boarding: Anyone who can handle 180 km/h in a 50 zone.",
-      "Ric – Says he's not hungry. Then eats half your order and says, 'just tasting bro.'"
-    ];
+    <script>
+      const flightPrefixes = ["MAZ", "LB", "ZGH", "YALLA", "SIM", "LBN"];
+      const gateJokes = [
+        "Gate A7 – near the shawarma stand",
+        "Gate B3 – past the third pothole",
+        "Gate Z1 – next to the guy selling mana2eesh",
+        "Gate M4 – beside the broken roundabout",
+        "Gate C2 – near the loud dabke wedding",
+        "Gate D9 – under the hanging wires",
+        "Gate E5 – past the shortcut with 4 speed bumps",
+      ];
+      const jokes = [
+        "Brian – Always late. Needs a round of applause if he's ever early.",
+        "Vic – Always in the gym. Might board with protein powder in his carry-on.",
+        "Kerkor – Always trying to kill someone in football. Slide tackles at takeoff.",
+        "Ric – Can’t board without snacks. Last time he brought chips, they lived in the Mazda longer than some of our friendships.",
+        "GAF – Thinks he's a doctor, but almost killed me last time. Board at your own risk.",
+        "Ray – Always puts music in the car… I just wish they were all good.",
+        "If this flight had leg day, Vic would’ve already been here.",
+        "Brian probably missed this flight too. Classic.",
+        "GAF’s prescription for turbulence? Panadol and vibes.",
+        "Kerkor’s boarding pass says ‘slide tackle ready’. Proceed with caution.",
+        "Jean – Blasts French music like he’s Paris-born… but studied in English and barely speaks French. Shouts on the road like he owns it and the soundtrack.",
+        "Jean – Plays French music at max volume, shouts like a rally driver, and somehow still asks what 'bonjour' means.",
+        "No seatbelts, no snacks… but I might be at your door in 15 minutes. Buckle up (emotionally).",
+        "Delays? Never heard of her. I operate on vibes and Google Maps.",
+        "Our in-flight service includes music from my busted speakers and sharp turns you didn’t ask for.",
+        "No turbulence. Just Lebanese roads.",
+        "Book now. No refunds. No mercy.",
+        "In case of emergency, pray I don’t miss the exit.",
+        "Now boarding: Anyone who can handle 180 km/h in a 50 zone.",
+        "Ric – Says he's not hungry. Then eats half your order and says, 'just tasting bro.'",
+      ];
 
-    async function fetchRequests() {
-      const res = await fetch('/requests');
-      const data = await res.json();
-      const pendingDiv = document.getElementById('pendingList');
-      const approvedDiv = document.getElementById('approvedList');
-      pendingDiv.innerHTML = '';
-      approvedDiv.innerHTML = '';
+      async function fetchRequests() {
+        const res = await fetch("/requests");
+        const data = await res.json();
+        const pendingDiv = document.getElementById("pendingList");
+        const approvedDiv = document.getElementById("approvedList");
+        pendingDiv.innerHTML = "";
+        approvedDiv.innerHTML = "";
 
-      data.forEach(person => {
-        if (person.status === 'pending') {
-          const div = document.createElement('div');
-          div.className = 'card';
-          div.innerHTML = `<strong>${person.name}</strong> from ${person.city}<br>Status: ${person.status}`;
+        data.forEach((person) => {
+          if (person.status === "pending") {
+            const div = document.createElement("div");
+            div.className = "card";
+            div.innerHTML = `<strong>${person.name}</strong> from ${person.city}<br>Status: ${person.status}`;
+            const input = document.createElement("input");
+            input.placeholder = "Enter ETA";
+            input.id = "eta-" + person.name;
+            const approveBtn = document.createElement("button");
+            approveBtn.textContent = "Approve";
+            approveBtn.onclick = () =>
+              updateStatus(person.name, "approved", input.value);
+            const rejectBtn = document.createElement("button");
+            rejectBtn.textContent = "Reject";
+            rejectBtn.onclick = () =>
+              updateStatus(person.name, "rejected", null);
+            div.appendChild(document.createElement("br"));
+            div.appendChild(input);
+            div.appendChild(approveBtn);
+            div.appendChild(rejectBtn);
+            pendingDiv.appendChild(div);
+          } else if (person.status === "approved") {
+            const flight = `${
+              flightPrefixes[Math.floor(Math.random() * flightPrefixes.length)]
+            }-${Math.floor(100 + Math.random() * 900)}`;
+            const gate =
+              gateJokes[Math.floor(Math.random() * gateJokes.length)];
+            const joke = jokes[Math.floor(Math.random() * jokes.length)];
 
-          const input = document.createElement('input');
-          input.placeholder = 'Enter ETA';
-          input.id = 'eta-' + person.name;
+            const card = document.createElement("div");
+            card.className = "boarding-card";
+            card.innerHTML = `
+          <strong>${person.name}</strong><br>
+          City: ${person.city}<br>
+          Flight: ${flight}<br>
+          Gate: ${gate}<br>
+          ETA: <input type="text" id="update-eta-${person.name}" value="${person.eta}" style="width: 100px;"><br><br>
+          <em>"${joke}"</em><br><br>
+        `;
 
-          const approveBtn = document.createElement('button');
-          approveBtn.textContent = 'Approve';
-          approveBtn.onclick = () => updateStatus(person.name, 'approved', input.value);
+            const updateBtn = document.createElement("button");
+            updateBtn.textContent = "Update ETA";
+            updateBtn.onclick = () =>
+              updateStatus(
+                person.name,
+                "approved",
+                document.getElementById(`update-eta-${person.name}`).value
+              );
 
-          const rejectBtn = document.createElement('button');
-          rejectBtn.textContent = 'Reject';
-          rejectBtn.onclick = () => updateStatus(person.name, 'rejected', null);
+            const deleteBtn = document.createElement("button");
+            deleteBtn.textContent = "Delete";
+            deleteBtn.onclick = () => deleteRequest(person.name);
 
-          div.appendChild(document.createElement('br'));
-          div.appendChild(input);
-          div.appendChild(approveBtn);
-          div.appendChild(rejectBtn);
+            card.appendChild(updateBtn);
+            card.appendChild(deleteBtn);
+            approvedDiv.appendChild(card);
+          }
+        });
+      }
 
-          pendingDiv.appendChild(div);
-        } else if (person.status === 'approved') {
-          const flight = `${flightPrefixes[Math.floor(Math.random() * flightPrefixes.length)]}-${Math.floor(100 + Math.random() * 900)}`;
-          const gate = gateJokes[Math.floor(Math.random() * gateJokes.length)];
-          const joke = jokes[Math.floor(Math.random() * jokes.length)];
+      async function updateStatus(name, status, eta) {
+        await fetch(`/requests/${encodeURIComponent(name)}`, {
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ status, eta }),
+        });
+        fetchRequests();
+      }
 
-          const card = document.createElement('div');
-          card.className = 'boarding-card';
-          card.innerHTML = `
-            <strong>${person.name}</strong><br>
-            City: ${person.city}<br>
-            Flight: ${flight}<br>
-            Gate: ${gate}<br>
-            ETA: ${person.eta}<br><br>
-            <em>"${joke}"</em>
-          `;
-          approvedDiv.appendChild(card);
-        }
-      });
-    }
+      async function deleteRequest(name) {
+        await fetch(`/requests/${encodeURIComponent(name)}`, {
+          method: "DELETE",
+        });
+        fetchRequests();
+      }
 
-    async function updateStatus(name, status, eta) {
-      await fetch(`/requests/${encodeURIComponent(name)}`, {
-        method: 'PUT',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ status, eta })
-      });
       fetchRequests();
-    }
-
-    fetchRequests();
-  </script>
-</body>
+    </script>
+  </body>
 </html>
